# veed-hackathon

./: README.md  requirements.txt  test.py
backend/hackathon-dependencies/: README.md  api.py  demo.py  main.py  pyproject.toml  requirements.txt
backend/test/: ali-api-client.py  ali-api.py  craw.py  eleven-third.py  eleven_labs.py  eleven_working.py  elevenlabs_t.py  fall.py  objectdetector.py  openrouter.py  readme.txt  sieve_api_test.py  sieve_avatar_test.py  sievetest-working.py  video_gen.py
backend/test/crawler/: README.md  pyproject.toml
backend/test/crawler/crawlee-google-search/: main.py  routes.py
backend/test/images/house1/: info.txt
backend/test/images/house3/: info.txt
backend/test/images/house4/: info.txt
backend/test2/: openai.py
frontend/: README.md  about.html  index.html  package-lock.json  package.json
frontend/src/components/: ChatGPTFeed.tsx  FullScreenIframe.tsx  ImageUpload.tsx  VideoGenerator.tsx  VoiceRecorder.tsx  gallery.tsx
frontend/src/pages/: Index.tsx
