[tool.poetry]
name = "crawlee-google-search"
version = "0.0.1"
description = ""
authors = ["Mantisus <moriturus7@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
crawlee = {extras = ["beautifulsoup", "curl-impersonate"], version = "^0.4.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
